# zephyr

boards/arm/stm32_f429ve/: Kconfig.board  Kconfig.defconfig  board.cmake  stm32_f429ve.dts  stm32_f429ve.yaml
project/robot_chassis/: .editorconfig  CMakeLists.txt  prj.conf
project/robot_chassis/Application/Src/: main.cpp
project/robot_chassis/HAL/: CMakeLists.txt
project/robot_chassis/HAL/Inc/: pwm.hpp
project/robot_chassis/HAL/Src/: pwm.cpp
project/robot_chassis/Middleware/: CMakeLists.txt
project/robot_chassis/Middleware/Motor/Inc/: brush_dc_motor.hpp  brushless_direct_current_motor.hpp  motor_abstract.hpp  motor_control_interface.hpp  servo_motor.hpp  stepper_motor.hpp
project/robot_chassis/Middleware/Motor/Src/: brush_dc_motor.cpp  brushless_direct_current_motor.cpp  servo_motor.cpp  stepper_motor.cpp
project/robot_chassis/Utilities/: CMakeLists.txt
project/robot_chassis/Utilities/DesignPatterns/: CMakeLists.txt
project/robot_chassis/Utilities/DesignPatterns/Doc/: Adapter.md  ChainOfResponsibility.md  FactoryMethod.md  Proxy.md  SixPrinciples.md  Strategy.md
project/robot_chassis/Utilities/DesignPatterns/Inc/: Delegate.hpp  Observer.hpp  Singleton.hpp
project/robot_chassis/boards/: stm32_f429ve.overlay
project/robot_chassis/dts/bindings/: servo-pwms.yaml
project/robot_chassis/src/: main.c
